--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,9 +1,14 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Contact</h1>
+<h1>{{ title }}</h1>
+    {% if confirm_message %}
+    <p>{{ confirm_message }}</p>
+    {% endif %}
+    {% if form %}
     <form method="post" action="">{% csrf_token %}
     {{ form.as_p }}
         <input type="submit" value="submit"/>
     </form>
+    {% endif %}
 {% endblock %}
