--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% load crispy_forms_tags %}
 {% block content %}
 <h1>{{ title }}</h1>
     {% if confirm_message %}
@@ -7,7 +7,8 @@
     {% endif %}
     {% if form %}
     <form method="post" action="">{% csrf_token %}
-    {{ form.as_p }}
+    {# {{ form.as_p }} #}
+        {{ form |crispy }}
         <input type="submit" value="submit"/>
     </form>
     {% endif %}
