--- a/templates/home.html
+++ b/templates/home.html
@@ -4,4 +4,10 @@
 {% endblock %}
 {% block content %}
     <h1>Test</h1>
+    {% if not request.user.is_authenticated %}
+    <a href="{% url 'account_signup' %}">signup</a>
+    <a href="{% url 'account_login' %}">login</a>
+    {% else %}
+    <a href="{% url 'account_logout' %}">logout</a>
+    {% endif %}
 {% endblock %}
