--- a/templates/home.html
+++ b/templates/home.html
@@ -1,8 +1,10 @@
 {% extends 'base.html' %}
+{% load staticfiles %}
 {% block two %}
 <h1>Test2</h1>
 {% endblock %}
 {% block content %}
+    <img src="{% static 'img/img.jpg' %}" alt=""/>
     <h1>Test</h1>
     {% if not request.user.is_authenticated %}
     <a href="{% url 'account_signup' %}">signup</a>
